--- a/index.html
+++ b/index.html
@@ -1,1 +1,320 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>My site</title>
+
+	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+	
+</head>
+<body>
+
+<h1>My site</h1>
+
+<div class="slick-slider">
+    <a data-fancybox="gallery" href="photo/1.jpg"><img src="photo/1.jpg"></a>
+    <a data-fancybox="gallery" href="photo/2.jpg"><img src="photo/2.jpg"></a>
+    <a data-fancybox="gallery" href="photo/3.jpg"><img src="photo/3.jpg"></a>
+    <a data-fancybox="gallery" href="photo/4.jpg"><img src="photo/4.jpg"></a>
+    <a data-fancybox="gallery" href="photo/5.jpg"><img src="photo/5.jpg"></a>
+    <a data-fancybox="gallery" href="photo/6.jpg"><img src="photo/6.jpg"></a>	
+</div>
+
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	
+  <script type="text/javascript" src="slick/slick.min.js"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $('.slick-slider').slick({
+        autoplay: true,
+        speed: 800,
+        autoplaySpeed: 2000,
+        arrows: true,
+        dots: false,
+        adaptiveHeight: true,
+		infinite: true,
+		slidesToShow: 4, 
+		slidesToScroll: 1,
+      });
+    });
+  </script>
+  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css" />
+<script type="text/javascript">
+    jQuery(document).ready(function() {
+        jQuery(".gallery a").fancybox(); 
+    });
+</script>
+  
+
+
+	<div>
+		<form action="" method="post" name="test" id="submitForm">
+
+			<label for="firstName">Имя</label>
+			<input type="text" name="firstName" placeholder="Имя" value="" id="firstName"/><br/>
+			<!-- <label for="email">email</label>
+			<input type="text" name="email" placeholder="email" value="" id="email"/><br/> -->
+			<label for="age">ваш возраст</label>
+			<input type="number" min="0" max="200" name="age" placeholder="ваш возраст" value="" id="age"/><br/>
+
+			<!-- <label for="picture">картинка</label>
+			<input type="text" id="picture" placeholder="Enter picture url ..."> -->
+
+			<br>
+			<!-- <a id="linkToGoogle" href="https://google.com.ua">Google</a> -->
+<!--
+			<button id="submitBtn" type="submit" onclick="valid(document.getElementById('submitForm'))">Submit</button> -->
+
+			<!-- <input id="submitBtn" type="submit" onclick="valid(document.getElementById('submitForm'))" value="Готово" /> -->
+
+			<button id='add' onclick="Add(); return false;">добавить</button>
+
+			<button onclick="delAll(); return false;">удалить все</button>
+
+		</form>
+
+		<table id="table" border="1">
+			<thead>
+					<tr>
+							<th>#</th>
+							<td>UserName:</td>
+							<th>Email:</th>
+							<td>Age</td>
+							<td>ac</td>
+							<th>Picture</th>
+							<th>Delete</th>
+							<th> <input type="button" id ="addDep" value="Add" onclick = "add()" </th>
+							<th> <input type="button" id ="deleteDep" value="x" onclick = "deleteRow(this)" </th>
+					</tr>
+			</thead>
+			<tbody>
+
+			</tbody>
+		</table>
+	</div>
+
+
+
+<script>
+
+// let form = document.getElementById('submitForm');
+// let users = [];
+//
+//
+// let deleteElement = e => {
+// 		if($(e.target).hasClass('remove-btn')) {
+// 				////Удаление нужного элемента из users
+// 		}
+// };
+//
+//
+// let renderUsers = users => {
+// 		let htmlStr = ``;
+// 		for(let index in users) {
+// 				htmlStr += `<tr>
+// 						<td>${+index+1}</td>
+// 						<td>${users[index].firstName}</td>
+// 						<td>${users[index].email}</td>
+// 						<td>${users[index].age}</td>
+// 						<td><img src="${users[index].picture}"></td>
+// 						<td><button class="remove-btn">Remove</button></td>
+// 				</tr>`;
+// 		}
+// 		$('#firstName, #email, #age, #picture').val('');
+// 		$('tbody').html(htmlStr);
+// };
+//
+// let addUser = e => {
+// 		e.preventDefault();
+// 		console.log('We are starting...');
+// 		let userObject = {
+// 				firstName: $('#firstName').val(),
+// 				email: $('#email').val(),
+// 				age: +$('#age').val(),
+// 				picture: $('#picture').val()
+// 		};
+// 		if(!userObject.firstName || !userObject.email || !userObject.age || !userObject.picture) {
+// 				//// alert('Заполните все поля');
+// 				return;
+// 		}
+// 		users.push(userObject);
+// 		renderUsers(users);
+// };
+//
+//
+// $('table tbody').on('click', deleteElement);
+//
+// $('#submitBtn').on('click', addUser);
+
+
+
+
+
+
+
+
+function Add() {
+
+var name = document.getElementById('firstName').value;
+var age_1 = document.getElementById('age').value;
+
+if(name && age_1) {
+
+var tr = document.createElement('tr');
+
+var td1 = document.createElement('td');
+var td2 = document.createElement('td');
+var td3 = document.createElement('td');
+
+var text1 = document.createTextNode(name);
+var text2 = document.createTextNode(age_1);
+var text3 = document.createElement('button');
+var buttext = document.createTextNode('delete');
+var atr = document.createAttribute('onclick');
+atr.value = 'deleteRow(this);';
+text3.appendChild(buttext);
+text3.setAttributeNode(atr);
+
+td1.appendChild(text1);
+td2.appendChild(text2);
+td3.appendChild(text3);
+
+tr.appendChild(td1);
+tr.appendChild(td2);
+tr.appendChild(td3);
+
+var table = document.getElementById('table');
+table.appendChild(tr);
+console.log('added');
+	}
+}
+
+function delAll() {
+	var table = document.getElementById('table');
+
+	for(var i = table.rows.length - 1; i > 0; i--) {
+		table.deleteRow(i);
+	}
+}
+
+function deleteRow(r) {
+		var i = r.parentNode.parentNode.rowIndex;
+		document.getElementById('table').deleteRow(i);
+	}
+
+</script>
+
+
+
+
+
+<h2>Photo</h2>
+<div class="flex">
+    <div class="handle-item handle-item--2 spoiler-wrap disabled">
+        <img class="spoiler-body" src="photo/1.jpg">
+        <p class="spoiler-head">photo 1</p>
+    </div>
+    <div class="handle-item handle-item--2 spoiler-wrap disabled">
+        <img class="spoiler-body" src="photo/2.jpg">
+        <p class="spoiler-head">photo 2</p>
+    </div>
+    <div class="handle-item handle-item--2 spoiler-wrap disabled">
+        <img class="spoiler-body" src="photo/3.jpg">
+        <p class="spoiler-head">photo 3</p>
+    </div>
+    <div class="handle-item handle-item--2 spoiler-wrap disabled">
+        <img class="spoiler-body" src="photo/4.jpg">
+        <p class="spoiler-head">photo 4</p>
+    </div>
+    <div class="handle-item handle-item--2 spoiler-wrap disabled">
+        <img class="spoiler-body" src="photo/5.jpg">
+        <p class="spoiler-head">photo 5</p>
+    </div>
+    <div class="handle-item handle-item--2 spoiler-wrap disabled">
+        <img class="spoiler-body" src="photo/6.jpg">
+        <p class="spoiler-head">photo 6</p>
+    </div>
+</div>
+
+
+
+<style>
+.spoiler-wrap{background:#fff;margin: 0 0 8px;border:1px solid #efefef}
+.spoiler-head{background:#efefef;cursor:pointer;padding:5px;}
+.spoiler-body{padding:10px}
+.spoiler-wrap.disabled .spoiler-body{display:none}
+.spoiler-wrap.active{border-color:#57AA43}
+.spoiler-wrap.active .spoiler-head{background:#57AA43;color:#fff}
+</style>
+
+<script>
+$(function () {
+	$('.spoiler-body').hide(300);
+	$(document).on('click','.spoiler-head',function (e) {
+		e.preventDefault()
+		$(this).parents('.spoiler-wrap').toggleClass("active").find('.spoiler-body').slideToggle();
+	})
+})
+</script>
+
+
+
+
+
+<script>
+jQuery(document).ready(function($) {
+
+	    $("#cont div").hide(); // Initially hide all content
+	    $("#tabs li:first").attr("id","current"); // Activate first tab
+	    $("#cont div:first").fadeIn(); // Show first tab content
+
+	    $('#tabs a').click(function(e) {
+	        e.preventDefault();
+	        $("#cont div").hide(); //Hide all content
+	        $("#tabs li").attr("id",""); //Reset id's
+	        $(this).parent().attr("id","current"); // Activate this
+	        $('#' + $(this).attr('title')).fadeIn(); // Show content for current tab
+	    });
+	});
+</script>
+
+
+<div>
+        <ul id="tabs" style="display: flex; justify-content: space-around;">
+            <li id="current" style="background: aqua; padding: 10px;">
+                <a href="#" title="tabs1">tab 1</a>
+            </li>
+			<li style="background: aqua; padding: 10px;">
+                <a href="#" title="tabs2">tab 2</a>
+            </li>
+			<li style="background: aqua; padding: 10px;">
+                <a href="#" title="tabs3">tab 3</a>
+            </li>
+        </ul>
+		
+        <div id="cont" style="text-align: center;">
+            <div id="tabs1" style="display: block;">
+				<p>tab 1</p>
+            </div>
+			
+            <div id="tabs2">
+				<p>tab 2</p>
+            </div>
+			
+			<div id="tabs3">
+				<p>tab 3</p>
+			</div>
+        </div>
+    </div>
+
+
+
+</body>
+</html>
 
