--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 <!----------------------------- end fancybox ----------------->  
 
-	<link rel="stylesheet" type="text/css" href="/style.css"/>	
-	<script src="/js.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css"/>	
+	<script src="js.js"></script>
 </head>
 
 
